refactor(framework): structural and organizational API changes
- refactored various existing API lifecycle hooks and CLI implementations
- added stubs for tree list views and tree stopwatch

Took 7 hours 21 minutes

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
     <PackageVersion Include="Crayon" Version="2.0.69" />
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+    <PackageVersion Include="Nito.Disposables" Version="2.5.0" />
     <PackageVersion Include="Pastel" Version="4.2.0" />
   </ItemGroup>
 </Project>
