refactor: improved configurations of .csproj
Took 57 hours 57 minutes

--- a/Solutions/concision/Dev.Concision.ProjectEuler.csproj
+++ b/Solutions/concision/Dev.Concision.ProjectEuler.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <RootNamespace>Net.ProjectEuler.Math</RootNamespace>
-        <AssemblyName>Net.ProjectEuler.Math</AssemblyName>
+        <RootNamespace>Dev.Concision.ProjectEuler</RootNamespace>
+        <AssemblyName>Dev.Concision.ProjectEuler</AssemblyName>
 
         <Version>0.1.0</Version>
-        <Authors>concision,thenintendodude</Authors>
+        <Authors>concision</Authors>
 
         <TargetFramework>net8.0</TargetFramework>
         <LangVersion>12</LangVersion>
@@ -13,11 +13,12 @@
         <Nullable>enable</Nullable>
         <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="Combinatorics\" />
-        <Folder Include="Sieves\" />
+        <ProjectReference Include="..\..\Library\Framework\Dev.Concision.ProjectEuler.Framework.csproj" />
     </ItemGroup>
 
 </Project>
