--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,13 +1,17 @@
 ﻿<Project>
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageVersion Include="CommandLineParser" Version="2.9.1" />
-    <PackageVersion Include="Crayon" Version="2.0.69" />
-    <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-    <PackageVersion Include="Nito.Disposables" Version="2.5.0" />
-    <PackageVersion Include="Pastel" Version="4.2.0" />
-  </ItemGroup>
+
+    <PropertyGroup>
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageVersion Include="CommandLineParser" Version="2.9.1" />
+        <PackageVersion Include="Crayon" Version="2.0.69" />
+        <PackageVersion Include="JetBrains.Annotations" Version="2023.3.0" />
+        <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+        <PackageVersion Include="Nito.Disposables" Version="2.5.0" />
+        <PackageVersion Include="Pastel" Version="4.2.0" />
+    </ItemGroup>
+
 </Project>
