refactor(solutions): removed thenintendodude's collocated solution project

--- a/Solutions/Dev.Concision.ProjectEuler.Solutions.csproj
+++ b/Solutions/Dev.Concision.ProjectEuler.Solutions.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <RootNamespace>Dev.Concision.ProjectEuler</RootNamespace>
-        <AssemblyName>Dev.Concision.ProjectEuler</AssemblyName>
+        <RootNamespace>Dev.Concision.ProjectEuler.Solutions</RootNamespace>
+        <AssemblyName>Dev.Concision.ProjectEuler.Solutions</AssemblyName>
 
         <Version>0.1.0</Version>
         <Authors>concision</Authors>
@@ -17,7 +17,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Library\Framework\Dev.Concision.ProjectEuler.Framework.csproj" />
+        <ProjectReference Include="..\Library\Framework\Dev.Concision.ProjectEuler.Framework.csproj" />
     </ItemGroup>
 
 </Project>
