fix: resolved compilation issues

--- a/Solutions/Dev.Concision.ProjectEuler.Solutions.csproj
+++ b/Solutions/Dev.Concision.ProjectEuler.Solutions.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Library\Framework\Dev.Concision.ProjectEuler.Framework.csproj" />
+        <ProjectReference Include="..\Library\MathKit\Dev.Concision.MathKit.csproj" />
     </ItemGroup>
 
 </Project>
